# whisper-service

./: Dockerfile  README.md  main.py  pyproject.toml
app/: main.py
app/api/: transcribe.py  websocket.py
app/core/: config.py
app/services/: whisper_service.py
app/utils/: audio.py
k8s/: deployment.yaml  service.yaml
