[project]
name = "whisper-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "faster-whisper>=1.2.1",
    "numpy>=2.4.4",
    "pydub>=0.25.1",
    "python-multipart>=0.0.27",
    "uvicorn>=0.46.0",
    "websockets>=16.0",
]
